polish: Shilo Village (#2574)
* test: opt into sidebar test

* refactor: modernize

* polish

fix: add free inv slot recommendations for the two sections
refactor: rename a step
fix: various spelling mistakes
fix: widget IDs/gameval things